samples/_failures_safe/1761394136_d704e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d76b20bd.c: In function ‘main’:
./samples/SAFE/__tmp_d76b20bd.c:131:5: error: expected expression at end of input
  131 |     if (
      |     ^~
./samples/SAFE/__tmp_d76b20bd.c:131:5: error: expected declaration or statement at end of input
